yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-api
spec:
  selector:
    app: rick-and-morty-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
